--- a/vf_controller/package.xml
+++ b/vf_controller/package.xml
@@ -49,6 +49,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>kdl_kinematics</build_depend>
   <run_depend>control_toolbox</run_depend>
   <run_depend>controller_interface</run_depend>
   <run_depend>forward_command_controller</run_depend>
@@ -58,7 +59,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
-  
+  <run_depend>kdl_kinematics</run_depend>
   
 
 
