Working on the vf controller

--- a/vf_controller/config/vf_controller.yaml
+++ b/vf_controller/config/vf_controller.yaml
@@ -1,6 +1,8 @@
 vf_controller:
   type: "vf_controller/VFController"
-  ik:
+  kinematics:
     damp_max: 0.8
     epsilon: 0.1
+    root: "T0"
+    end_effector: "fixed_right_wrist"
   
