--- a/vf_controller/CMakeLists.txt
+++ b/vf_controller/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   kdl_kinematics
+  mechanism_manager
 )
 
 ## System dependencies are found with CMake's conventions
@@ -32,7 +33,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
  INCLUDE_DIRS include
  LIBRARIES ${PROJECT_NAME}
- CATKIN_DEPENDS pluginlib control_toolbox controller_interface forward_command_controller controller_manager hardware_interface roscpp rospy std_msgs kdl_kinematics
+ CATKIN_DEPENDS pluginlib control_toolbox controller_interface forward_command_controller controller_manager hardware_interface roscpp rospy std_msgs kdl_kinematics mechanism_manager
  DEPENDS system_lib
 )
 
