--- a/vf_controller/package.xml
+++ b/vf_controller/package.xml
@@ -50,6 +50,8 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>kdl_kinematics</build_depend>
+  <build_depend>mechanism_manager</build_depend>
+  
   <run_depend>control_toolbox</run_depend>
   <run_depend>controller_interface</run_depend>
   <run_depend>forward_command_controller</run_depend>
@@ -60,7 +62,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>kdl_kinematics</run_depend>
-  
+  <run_depend>mechanism_manager</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
