--- a/mechanism_manager/config/cfg.yml
+++ b/mechanism_manager/config/cfg.yml
@@ -1,7 +1,7 @@
-models: ['gmm_1.txt','gmm_1.txt']
-prob_mode: conditional
+models: ['gmm_1.txt']
+prob_mode: hard
 adapt_gains: [false,false]
 use_weighted_dist: [false,false]
-use_active_guide: [true,true]
+use_active_guide: [false,false]
 
 
