--- a/vf_controller/CMakeLists.txt
+++ b/vf_controller/CMakeLists.txt
@@ -14,7 +14,6 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  kdl_kinematics
   mechanism_manager
 )
 
@@ -33,7 +32,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
  INCLUDE_DIRS include
  LIBRARIES ${PROJECT_NAME}
- CATKIN_DEPENDS pluginlib control_toolbox controller_interface forward_command_controller controller_manager hardware_interface roscpp rospy std_msgs kdl_kinematics mechanism_manager
+ CATKIN_DEPENDS pluginlib control_toolbox controller_interface forward_command_controller controller_manager hardware_interface roscpp rospy std_msgs mechanism_manager
  DEPENDS system_lib
 )
 
