--- a/vf_gui/package.xml
+++ b/vf_gui/package.xml
@@ -9,7 +9,14 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>roslib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>mechanism_manager</build_depend>
+
+  <run_depend>roscpp</run_depend>
+  <run_depend>roslib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>mechanism_manager</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
