--- a/toolbox/package.xml
+++ b/toolbox/package.xml
@@ -4,9 +4,6 @@
   <version>0.0.0</version>
   <description>The toolbox package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="gennaro@todo.todo">gennaro</maintainer>
 
 
@@ -48,6 +45,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>yaml-cpp</run_depend>
   <run_depend>realtime_tools</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
